Had bugs in the previous commit. Added links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 
 <head>
-	<title>Hello World !!!</title>
+	<title>Lucas Bauer Portfolio</title>
 </head>
 
+<body>
+	<h1>Hello World!!!</h1>
+	<nav>
+		<a href="./Bears.html">Codecademy HTML Lesson</a>
+		<a href="./aboutme.html">About me</a>
+	</nav>
+</body>
 
