Links were not working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 	<h1>Hello World!!!</h1>
 	<nav>
-		<a href="./Bears.html">Codecademy HTML Lesson</a>
-		<a href="./aboutme.html">About me</a>
+		<a href=".Codecademy_HTML/Bears.html">Codecademy HTML Lesson</a>
+		<a href=".Codecademy_HTML/aboutme.html">About me</a>
 	</nav>
 </body>
 
