Added in heading and trying to add in an image.

--- a/Projects/Dasmoto's Arts & Crafts/index.html
+++ b/Projects/Dasmoto's Arts & Crafts/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Dasmoto's Arts & Crafts</h1>
+    <img src="/Projects/Dasmoto's Arts & Crafts/Resource/hacksaw.jpg" alt="">
+    <h2>Brushes</h2>
 </body>
