Trying to figure out how to insertan image.

--- a/Projects/Dasmoto's Arts & Crafts/index.html
+++ b/Projects/Dasmoto's Arts & Crafts/index.html
@@ -2,6 +2,6 @@
 
 <body>
     <h1>Dasmoto's Arts & Crafts</h1>
-    <img src="/Projects/Dasmoto's Arts & Crafts/Resource/hacksaw.jpg" alt="">
+    <img src="/Projects/Dasmoto's Arts & Crafts/Resource/hacksaw.jpg" alt="Description" height="48" width="48" />
     <h2>Brushes</h2>
 </body>
