Trying to understand how inserting images works

--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -2,6 +2,7 @@
 
 <body>
     <h1>Dasmoto's Arts & Crafts</h1>
-    <img src="/Projects/Dasmoto's Arts & Crafts/Resource/hacksaw.jpg" alt="Description" height="48" width="48" />
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
     <h2>Brushes</h2>
+    <img src="L-Bauer/L-Bauer.github.io/Projects/Dasmoto's Arts & Crafts/Resource/pattern.jpeg" alt="Test1">
 </body>
