--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-
+<html>
+<head>
+    <link href="Resource/CSS/index.css" type="text/css" rel="stylesheet">
+</head>
 <body>
     <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
     <h2>Brushes</h2>
@@ -14,6 +17,5 @@
     <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg" alt=""/>
     <h3><strong>Clean Finnish Paint</strong></h3>
     <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <strong>Starting at $5.00 / tube.</strong></p>
-
-
 </body>
+</html>
