--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -4,18 +4,26 @@
     <link href="Resource/CSS/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
-    <h2>Brushes</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
-    <h3><strong>Hacksaw Brushes</strong></h3>
-    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <strong>Starting at $3.00 / brush.</strong></p>
-    <h2>Frames</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg" alt=""/>
-    <h3><strong>Art Frames (assorted)</strong></h3>
-    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <strong>Starting at $2.00 / frame.</strong></p>
-    <h2>Paint</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg" alt=""/>
-    <h3><strong>Clean Finnish Paint</strong></h3>
-    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <strong>Starting at $5.00 / tube.</strong></p>
+    <div>
+        <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
+    </div>
+    <div>
+        <h2>Brushes</h2>
+        <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
+        <h3><strong>Hacksaw Brushes</strong></h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <strong>Starting at $3.00 / brush.</strong></p>
+    </div>
+    <div>
+        <h2>Frames</h2>
+        <img src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg" alt=""/>
+        <h3><strong>Art Frames (assorted)</strong></h3>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <strong>Starting at $2.00 / frame.</strong></p>
+    </div>
+    <div>
+        <h2>Paint</h2>
+        <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg" alt=""/>
+        <h3><strong>Clean Finnish Paint</strong></h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <strong>Starting at $5.00 / tube.</strong></p>
+    </div>    
 </body>
 </html>
