--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 	<h1>Hello World!!!</h1>
 	<nav>
-		<a href="./Codecademy_HTML/Bears.html">Codecademy HTML Lesson</a>
+		<a href="Projects/Bears/Bears.html" target="_blank">Codecademy HTML Bears Lesson</a>
+		<a href="Projects/Dasmoto's Arts & Crafts/Arts.html" target="_blank">Codecademy HTML Business Lesson</a>
 	</nav>
 </body>
 
