Was rename index.css in Dasmots to arts.css. I had duplicate index.css files. I modified the html for reflect changes name changes.

--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="Resource/CSS/index.css" type="text/css" rel="stylesheet">
+    <link href="Resource/CSS/Arts.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div>
