Add index.css and added reference to index.css to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Lucas Bauer Portfolio</title>
+	<link href="Resource/CSS/index.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
