Add links to Arts.html and Bears/aboutme.html to return to portfolio

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<h1>Hello World!!!</h1>
 	<nav>
-		<a href="Projects/Bears/Bears.html" target="_blank">Codecademy HTML Bears Lesson</a>
-		<a href="Projects/Dasmoto's Arts & Crafts/Arts.html" target="_blank">Codecademy HTML Business Lesson</a>
+		<a href="Projects/Bears/Bears.html">Codecademy HTML Bears Lesson</a>
+		<a href="Projects/Dasmoto's Arts & Crafts/Arts.html">Codecademy HTML Business Lesson</a>
 	</nav>
 </body>
 
