--- a/Projects/Bears/aboutme.html
+++ b/Projects/Bears/aboutme.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <nav>
-    <a href="/">Brown Bear</a>
+    <a href="/">Return to Portfolio</a>
     <!-- web browsers respond to index.html and / the same way -->
-    <a href="./aboutme.html">About Me</a>
+    <a href="./Bears.html">Brown Bear</a>
   </nav>
 
 <h1>About Me</h1>
