--- a/Projects/Bears/Bears.html
+++ b/Projects/Bears/Bears.html
@@ -9,7 +9,7 @@
   <nav>
     <a href="./Bears.html">Brown Bear</a>
     <a href="./aboutme.html">About Me</a>
-    <a href="./../index.html">Return to Portfolio</a>
+    <a href="../../index.html">Return to Portfolio</a>
   </nav>
   <h1>The Brown Bear</h1>
   <nav>
