--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -25,6 +25,6 @@
         <h3><strong>Clean Finnish Paint</strong></h3>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <strong>Starting at $5.00 / tube.</strong></p>
     </div>  
-    <a href="./../index.html">Return to Portfolio</a>  
+    <a href="./../../index.html">Return to Portfolio</a>  
 </body>
 </html>
