--- a/Projects/Bears/Bears.html
+++ b/Projects/Bears/Bears.html
@@ -7,9 +7,8 @@
 
 <body>
   <nav>
-    <a href="./Bears.html">Brown Bear</a>
     <a href="./aboutme.html">About Me</a>
-    <a href="../../index.html">Return to Portfolio</a>
+    <a href="/">Return to Portfolio</a>
   </nav>
   <h1>The Brown Bear</h1>
   <nav>
