Added a version # to the bottom. Then when I make changes. I can easily know if the webpage has updated to the current version.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 		<a href="Projects/Bears/Bears.html">Codecademy HTML Bears Lesson</a>
 		<a href="Projects/Dasmoto's Arts & Crafts/Arts.html">Codecademy HTML Business Lesson</a>
 	</nav>
+	<div>
+		<h3>Version 0.1</h3>
+	</div>
 </body>
 
