Tring to make links into an unorder list. Version .02

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 
 <body>
 	<h1>Hello World!!!</h1>
-	<nav>
-		<a href="Projects/Bears/Bears.html">Codecademy HTML Bears Lesson</a>
-		<a href="Projects/Dasmoto's Arts & Crafts/Arts.html">Codecademy HTML Business Lesson</a>
-	</nav>
 	<div>
-		<h3>Version 0.1</h3>
+		<nav>
+			<ul>
+				<li><a href="Projects/Bears/Bears.html">Codecademy HTML Bears Lesson</a></li>
+				<li><a href="Projects/Dasmoto's Arts & Crafts/Arts.html">Codecademy HTML Business Lesson</a></li>
+			</ul>
+		</nav>
+	</div>
+
+	<div>
+		<h3>Version 0.02</h3>
 	</div>
 </body>
 
