Adding background image to the top line

--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -4,7 +4,7 @@
     <link href="Resource/CSS/Arts.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <div id="Title">
         <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
     </div>
     <div>
