--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -7,7 +7,7 @@
     <div id="Title">
         <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
     </div>
-    <div>
+    <div id="Foo">
         <h2>Brushes</h2>
         <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
         <h3><strong>Hacksaw Brushes</strong></h3>
