Trying to fix id problem

--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -7,8 +7,8 @@
     <div id="Title">
         <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
     </div>
-    <div id="Foo">
-        <h2>Brushes</h2>
+    <div>
+        <h2 id="Foo">Brushes</h2>
         <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
         <h3><strong>Hacksaw Brushes</strong></h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <strong>Starting at $3.00 / brush.</strong></p>
