Got the background image to show up for the title

--- a/Projects/Dasmoto's Arts & Crafts/Arts.html
+++ b/Projects/Dasmoto's Arts & Crafts/Arts.html
@@ -4,10 +4,10 @@
     <link href="Resource/CSS/Arts.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <div id="title">
         <h1><strong>Dasmoto's Arts & Crafts</strong></h1>
     </div>
-    <div id="Foo">
+    <div>
         <h2>Brushes</h2>
         <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg" alt=""/>
         <h3><strong>Hacksaw Brushes</strong></h3>
