--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<ul>
 				<li><a href="Projects/Bears/Bears.html">Codecademy HTML Bears Lesson</a></li>
 				<li><a href="Projects/Dasmoto's Arts & Crafts/Arts.html">Codecademy HTML Business Lesson</a></li>
-                <li><a href="https://l-bauer.github.io/etch-sketch-odin/">Etch Sketch Odin Project</a></li>
+                <li><a href="https://l-bauer.github.io/etch-sketch-odin/" target="_blank">Etch Sketch Odin Project</a></li>
 			</ul>
 		</nav>
 	</div>
